libraries/ckit/regression/valid-programs/a210.c
main (){
  int * const x, y;

  y = 3;

}
